Add documentation for RingCollector/LineSegment